# kvault

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: importing-data.md  migrating-0.12.md  openclaw-integration.md
kgraph/: README.md  __init__.py
kgraph/adapters/: __init__.py  protec.py
kgraph/cli/: README.md  __init__.py  main.py
kgraph/core/: README.md  __init__.py  config.py  frontmatter.py  index.py  observability.py  research.py  storage.py
kgraph/extensions/: __init__.py
kgraph/extensions/views/: __init__.py  base.py  dimensional.py
kgraph/matching/: README.md  __init__.py  alias.py  domain.py  fuzzy.py
kgraph/mcp/: __init__.py  server.py  state.py  validation.py
kgraph/orchestrator/: __init__.py  context.py  enforcer.py  runner.py  state_machine.py
kgraph/orchestrator/prompts/: decide.md  decide_hierarchy.md  refactor.md  research.md  research_hierarchy.md  write.md
kgraph/pipeline/: README.md  __init__.py  checkpoint.py  hooks.py  orchestrator.py  session.py
kgraph/pipeline/agents/: README.md  __init__.py  base.py  decision.py  extraction.py  research.py
kgraph/pipeline/apply/: README.md  __init__.py  executor.py
kgraph/pipeline/audit/: README.md  __init__.py  logger.py
kgraph/pipeline/staging/: README.md  __init__.py  database.py  question_queue.py
kgraph/templates/: config.yaml
kgraph/templates/entity_types/: default.yaml
kgraph/templates/prompts/: extraction.md  reconciliation.md
kvault/: README.md  __init__.py
kvault/cli/: _helpers.py  check.py  entity.py  events.py  journal.py  main.py  search.py  summary.py  validate.py  workflow.py
kvault/core/: README.md  __init__.py  daily_artifacts.py  events.py  frontmatter.py  index.py  locks.py  migration.py  observability.py  operations.py  paths.py  policy.py  reconciliation.py  research.py  search.py  storage.py  summary_quality.py  transactions.py  validation.py
kvault/matching/: README.md  __init__.py  alias.py  base.py  domain.py  fuzzy.py
kvault/mcp/: __init__.py  manifest.py  server.py  state.py  validation.py
kvault/orchestrator/: __init__.py  context.py  enforcer.py  runner.py  state_machine.py
kvault/orchestrator/prompts/: execute.md  propagate.md  refactor.md  research.md  research_hierarchy.md
kvault/templates/: AGENTS.md  CLAUDE.md  category_summary.md  journal_entry.md  root_summary.md
kvault/ui/: __init__.py  app.py  markdown.py  routes.py  search.py
kvault/ui/static/: style.css
kvault/ui/templates/: base.html  browse.html  entity.html  home.html  search.html
kvault/ui/templates/partials/: breadcrumb.html  entity_content.html  search_results.html  tree_children.html
releases/: 0.6.1.md
scripts/: migrate_to_frontmatter.py
skills/kvault/: SKILL.md
skills/kvault/agents/: openai.yaml
skills/kvault/references/: parallel-reconciliation.md
tests/: README.md  __init__.py  conftest.py  test_adapters.py  test_agents.py  test_api_exports.py  test_check.py  test_cli_commands.py  test_cli_workflow_012.py  test_cli_write_workflow.py  test_config_hierarchy.py  test_confirm_destructive.py  test_daily_artifacts.py  test_e2e_cli.py  test_e2e_pipeline.py  test_e2e_search.py  test_e2e_workflows.py  test_events.py  test_events_012.py  test_examples.py  test_extensions_views.py  test_frontmatter.py  test_hardening.py  test_hooks.py  test_index.py  test_init.py  test_log_cli.py  test_matching.py  test_mcp_handlers.py  test_mcp_pre_ui_hardening.py  test_mcp_server.py  test_mcp_validation.py  test_observability.py  test_operations.py  test_orchestrator.py  test_policy_migration_012.py  test_pressure_fixes.py  test_reconciliation_012.py  test_research.py  test_safety_integrity_012.py  (+7 more)
tests/fixtures/: __init__.py  sample_config.yaml  sample_emails.json
tests/fixtures/sample_kb/: _summary.md
tests/fixtures/sample_kb/.kvault/: logs.db
tests/fixtures/sample_kb/journal/2026-02/: log.md
tests/fixtures/sample_kb/people/: _summary.md
tests/fixtures/sample_kb/people/friends/: _summary.md
tests/fixtures/sample_kb/people/friends/alice_smith/: _summary.md
tests/fixtures/sample_kb/people/friends/jose_garcia/: _summary.md
tests/fixtures/sample_kb/people/work/: _summary.md
tests/fixtures/sample_kb/people/work/bob_jones/: _summary.md
tests/fixtures/sample_kb/people/work/sarah_chen/: _summary.md
tests/fixtures/sample_kb/projects/: _summary.md
tests/fixtures/sample_kb/projects/kvault/: _summary.md
