[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kgraph"
version = "0.2.0"
description = "Config-driven knowledge graph framework for extracting structured knowledge from unstructured data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Eddie Landesberg"}
]
keywords = ["knowledge-graph", "entity-extraction", "llm", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
# Optional: Agent SDK for full programmatic control with hooks
# Falls back to CLI subprocess mode if not installed
sdk = [
    "claude-code-sdk>=0.1.0",
]

[project.scripts]
kgraph = "kgraph.cli.main:cli"

[project.urls]
Homepage = "https://github.com/eddiel/kgraph"
Documentation = "https://github.com/eddiel/kgraph#readme"
Repository = "https://github.com/eddiel/kgraph"

[tool.setuptools.packages.find]
where = ["."]
include = ["kgraph*"]

[tool.setuptools.package-data]
kgraph = ["templates/**/*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["kgraph"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
exclude = ["tests/"]

# Allow more permissive typing for initial release
# TODO: Gradually enable stricter type checking
[[tool.mypy.overrides]]
module = ["kgraph.*"]
strict = false
allow_untyped_defs = true
allow_any_generics = true
