[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgevault"
version = "0.5.0"
description = "Personal knowledge base that runs inside any MCP-compatible AI tool — structured, navigable, zero extra cost"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Eddie Landesberg"}
]
keywords = ["knowledge-graph", "entity-extraction", "llm", "data-processing", "claude-code", "mcp", "mcp-server", "personal-knowledge-base", "pkm", "llm-memory", "agent-memory", "openai-codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
# Optional: Agent SDK for full programmatic control with hooks
# Falls back to CLI subprocess mode if not installed
sdk = [
    "claude-code-sdk>=0.1.0",
]
# MCP server for Claude Code integration (requires Python 3.10+)
mcp = [
    "mcp>=1.0.0; python_version >= '3.10'",
]

[project.scripts]
kvault = "kvault.cli.main:cli"
kvault-mcp = "kvault.mcp.server:main"

[project.urls]
Homepage = "https://github.com/cimo-labs/kvault"
Documentation = "https://github.com/cimo-labs/kvault#readme"
Repository = "https://github.com/cimo-labs/kvault"
Issues = "https://github.com/cimo-labs/kvault/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvault*"]

[tool.setuptools.package-data]
kvault = ["templates/**/*", "py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["kvault"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
exclude = ["tests/"]

# Allow more permissive typing for initial release
# TODO: Gradually enable stricter type checking
[[tool.mypy.overrides]]
module = ["kvault.*"]
strict = false
allow_untyped_defs = true
allow_any_generics = true
