[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgevault"
version = "0.12.0"
description = "CLI-first personal knowledge base for AI agents — structured, navigable, zero extra cost"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Eddie Landesberg"}
]
keywords = ["knowledge-graph", "entity-extraction", "llm", "data-processing", "personal-knowledge-base", "pkm", "llm-memory", "agent-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
mcp = [
    "mcp>=1.0.0; python_version >= '3.10'",
]
[project.scripts]
kvault = "kvault.cli.main:cli"
kvault-mcp = "kvault.mcp.server:main"

[project.urls]
Homepage = "https://github.com/cimo-labs/kvault"
Documentation = "https://github.com/cimo-labs/kvault#readme"
Repository = "https://github.com/cimo-labs/kvault"
Issues = "https://github.com/cimo-labs/kvault/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvault*"]

[tool.setuptools.package-data]
kvault = ["templates/**/*", "py.typed"]

[tool.setuptools.data-files]
"share/knowledgevault/skills/kvault" = ["skills/kvault/SKILL.md"]
"share/knowledgevault/skills/kvault/agents" = ["skills/kvault/agents/openai.yaml"]
"share/knowledgevault/skills/kvault/references" = ["skills/kvault/references/parallel-reconciliation.md"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.py[cod]"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["kvault"]
omit = ["*/tests/*", "*/__init__.py", "*/mcp/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
exclude = ["tests/"]

# Allow more permissive typing for initial release
# TODO: Gradually enable stricter type checking
[[tool.mypy.overrides]]
module = ["kvault.*"]
strict = false
allow_untyped_defs = true
allow_any_generics = true
